= Update docker-compose example

--- a/docker-compose-example.yml
+++ b/docker-compose-example.yml
@@ -7,6 +7,9 @@ services:
     restart: always
     environment:
       - token=rxk38rh5qtyw95fkvm7kgfceh4mh6u #Example value from readme
+      #- streamersUrl=https://www.twitch.tv/directory/game/Rust?sort=VIEWER_COUNT&tl=c2542d6d-cd10-4532-919b-3d19f30a768b
+      #- watchAlwaysTopStreamer=true
+      #- channelsWithPriority=illojuan,alexby11,aroyitt
       #- userAgent=Mozilla/5.0 (X11; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/78.0.3904.108 Safari/537.36
       #- scrollDelay=2000
       #- scrollTimes=5
